# OCR_practice

./: main.py  pyproject.toml  test.py
data/: bonnetje.tiff
